Ingress2/newsvc-myapp.yml
apiVersion: v1
kind: Service
metadata:
  name: vertex-svc1
  labels:
    app: myvertexapp1
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: myvertexapp1

---

apiVersion: v1
kind: Service
metadata:
  name: vertex-svc1
  labels:
    app: myvertexapp1
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: myvertexapp1
